# gdemux

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/demux/: assigned_barcode.rs  bus.rs  demux.rs  filtadapt.rs  mod.rs  whitelist.rs
src/io/: mod.rs  paired.rs
src/utils/: args.rs  load.rs  mod.rs
tests/: run_tests.rs  test_assignment.rs  test_bus.rs  test_demux.rs  test_pair_reader.rs  test_whitelist.rs
tests/data/: guide_list.tab  test_R1.fq  test_R2.fq  test_whitelist.txt  test_whitelist_duplicate_seq.txt  test_whitelist_incorrect_size.txt
