[package]
name = "gdemux"
version = "0.1.0"
authors = ["noamteyssier <nb.teyssier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
clap = "2" 
indicatif = "0.13"
bio = { git = "https://github.com/noamteyssier/bio", branch = "main" }
